[project]
name = "wechat-article-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "pyyaml>=6.0",
    "loguru>=0.7.3",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.0",
    "fake-useragent>=2.2.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
